# bash-factory

./: README.md
CHIRP-Installer/: README.md  build-and-compress.sh  chirp-20240901-py3-none-any.whl  chirp-installer.sh  go.mod  go.sum  pyproject.toml
CHIRP-Installer/internal/os_cmd/: scripts.go  wrappers.go
CHIRP-Installer/internal/scraper/: scraper.go
CHIRP-Installer/legacy/: README.md
CHIRP-Installer/legacy/v1-bash/: chirp-installer.sh
CHIRP-Installer/legacy/v2-pyhon/: README.md
CHIRP-Installer/legacy/v2-pyhon/src/: main.py
CHIRP-Installer/legacy/v2-pyhon/tools/: build.py
CHIRP-Installer/main/: main.go
CHIRP-Installer/media/: chirp.desktop
CHIRP-Installer/src/: main.py
DevEnv-Setup/: README.md
GLaDOS-TTS-Wrapper/: README.md  glados.sh  wip_glados.ab
Mirror's-Edge-Macros/: Mirror's Edge Binds.ahk  README.md
OTD-Installer/: README.md  otd-installer.sh
Setup-PlatfromIO-Clangd/: README.md  setup-pio-clangd.py
